test/e2e/chainsaw/single-grpcroute-filters/resources/grpcroute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GRPCRoute
metadata:
  name: grpcroute-filters
  namespace: default
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: default
  rules:
    - matches:
        - method:
            service: rollouts.demo.Service
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            set:
              - name: X-GRPC-Request-Header
                value: grpc-request-value
              - name: X-Service-Environment
                value: test
            add:
              - name: X-GRPC-Added-Header
                value: grpc-added-value
            remove:
              - X-Remove-GRPC-Header
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            set:
              - name: X-GRPC-Response-Header
                value: grpc-response-value
              - name: X-GRPC-Server
                value: gateway-api-grpc-test
            add:
              - name: X-GRPC-Response-Added
                value: grpc-response-added-value
            remove:
              - grpc-status-details-bin
        - type: RequestMirror
          requestMirror:
            backendRef:
              name: argo-rollouts-grpc-mirror-service
              port: 80
      backendRefs:
        - name: single-grpcroute-filters-stable-service
          port: 80
        - name: single-grpcroute-filters-canary-service
          port: 80
