test/e2e/chainsaw/single-grpcroute-filters/resources/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: grpcroute-filters-rollout
  namespace: default
spec:
  replicas: 2
  strategy:
    canary:
      canaryService: single-grpcroute-filters-canary-service
      stableService: single-grpcroute-filters-stable-service
      trafficRouting:
        managedRoutes:
          - name: grpc-filter-preservation-route
        plugins:
          argoproj-labs/gatewayAPI:
            grpcRoutes:
              - name: grpcroute-filters
                useHeaderRoutes: true
            namespace: default
      steps:
        - setWeight: 30
        - setHeaderRoute:
            name: grpc-filter-preservation-route
            match:
              - headerName: X-GRPC-Filter-Test
                headerValue:
                  exact: preserve-grpc-filters
        - pause: {duration: 30s}
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: single-grpcroute-filters
  template:
    metadata:
      labels:
        app: single-grpcroute-filters
    spec:
      containers:
        - name: rollouts-demo
          image: argoproj/rollouts-demo:red
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
